--- a/Client/assets/index.css
+++ b/Client/assets/index.css
@@ -13,12 +13,12 @@ body, h1, h2, h3, h4, h5, h6, p, ul, ol {
   
   /* Set a background color for the entire page */
   body {
-    background-color: #f5f5f5;
+    background-color: #172E08;
   }
   
   /* Center the content on the page */
   .container {
-    max-width: 960px;
+    max-width: 400px;
     margin: 0 auto;
     padding: 20px;
   }
@@ -32,7 +32,7 @@ body, h1, h2, h3, h4, h5, h6, p, ul, ol {
 
   /* Style paragraphs */
   p {
-    margin-bottom: 10px;
+    margin-bottom: 400px;
     color: #555;
   }
   
