more colours added

--- a/Client/assets/index.css
+++ b/Client/assets/index.css
@@ -26,7 +26,7 @@ body, h1, h2, h3, h4, h5, h6, p, ul, ol {
   /* Style headings */
   h1, h2, h3 {
     margin-bottom: 20px;
-    color: #333;
+    color: #E0B1A9;
   }
   
 
