--- a/Client/assets/homepage.css
+++ b/Client/assets/homepage.css
@@ -1,3 +1,75 @@
 #bin_img {
     width:100px;
 }
+
+#recycling_menu_container {
+position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000000a1;
+
+  display: grid;
+  place-items: center;
+}
+
+#recycling_menu {
+    display: grid;
+    min-height: 70%;
+    width: 40%; 
+    background-color: white;
+    border-radius: 25px;
+}
+
+button[name="back_button"] {
+    display:grid;
+    position:absolute;
+    top:16%;
+    left:31%;
+}
+
+form[name="recycling_form"] {
+    display:grid;
+    place-items: center;
+}
+
+
+
+
+div[name="user_dropdown"] {
+    display:flex;
+    flex-direction: column;
+}
+
+#bin_and_user {
+    display:flex;
+    flex-direction: column;
+}
+
+#florin_and_user {
+    display: flex;
+    justify-content: space-between;
+}
+
+#bin_box {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+div[name="main_buttons"] {
+    display: flex;
+    justify-content: center;
+}
+
+div[name="whole_page"] {
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:80%;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
