--- a/Client/assets/homepage.css
+++ b/Client/assets/homepage.css
@@ -88,9 +88,32 @@ div[name="pop_up_container"] {
 
 div[name="pop_up"] {
     display: grid;
-    min-height: 20%;
-    width: 20%; 
+    min-height: 30%;
+    width: 30%; 
     background-color: white;
     border-radius: 25px;
     border: 1px solid black;
+    place-items: center;
+}
+
+p[name="title"] {
+    font-size: 24px;
+
+}
+
+div[name = "popup_buttons"] {
+    display:grid;
+}
+
+div[name = "dropdown_section"] {
+    position:relative;
+    display: inline-block;
+}
+
+div[name = "dropdown_content"] {
+    display:block;
+    position: absolute;
+    z-index: 1;
+    max-height:200px;
+    overflow:scroll;
 }
