--- a/Client/assets/homepage.css
+++ b/Client/assets/homepage.css
@@ -10,8 +10,8 @@ position: fixed;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #000000a1;
-
+  background-color: #172E08;
+  opacity: 0.95;
   display: grid;
   place-items: center;
 }
@@ -10051,19 +10051,26 @@ textarea.form-control-lg {
   font-size: 4.5rem;
 }
 
+.mb-5 {
+
+
+}
+
 header.masthead {
   position: relative;
-  background-color: #343a40;
-  background: url("../assets/img/bg-masthead.jpg") no-repeat center center;
+  background-color: #172E08;
+  background: url("../assets/images/background.png") no-repeat center center;
   background-size: cover;
   padding-top: 8rem;
   padding-bottom: 8rem;
+  height: 80px; 
+  /* change height back to normal by removing this */
 }
 header.masthead:before {
   content: "";
   position: absolute;
   background-color: #1c375e;
-  height: 100%;
+  height: 0%;
   width: 100%;
   top: 0;
   left: 0;
