--- a/Client/assets/admin.css
+++ b/Client/assets/admin.css
@@ -1,4 +1,5 @@
-#settings_menu_container {
+#settings_menu_container,
+#appointment_menu_container {
     position: fixed;
       top: 0;
       left: 0;
@@ -10,7 +11,8 @@
       place-items: center;
 }
 
-#settings_menu {
+#settings_menu,
+#appointment_menu {
     display: grid;
     min-height: 70%;
     width: 40%; 
@@ -18,7 +20,8 @@
     border-radius: 25px;
 }
 
-#settings_menu{
+#settings_menu,
+#appointment_menu{
     place-items: center;
 }
 
