--- a/Client/assets/admin.css
+++ b/Client/assets/admin.css
@@ -1,5 +1,6 @@
 #settings_menu_container,
-#appointment_menu_container {
+#appointment_menu_container,
+#address_menu_container {
     position: fixed;
       top: 0;
       left: 0;
@@ -12,7 +13,8 @@
 }
 
 #settings_menu,
-#appointment_menu {
+#appointment_menu,
+#address_menu {
     display: grid;
     min-height: 70%;
     width: 40%; 
@@ -21,7 +23,8 @@
 }
 
 #settings_menu,
-#appointment_menu{
+#appointment_menu,
+#address_menu{
     place-items: center;
 }
 
@@ -34,7 +37,9 @@ button[name="back_button"] {
 
 form[name="username_form"],
 form[name="password_form"],
-form[name="address_form"] {
+form[name="address_form"],
+form[name="create_address_form"],
+form[name="delete_address_form"] {
     display:grid;
     place-items: center;
 }
