--- a/Client/assets/homepage.css
+++ b/Client/assets/homepage.css
@@ -155,6 +155,12 @@ div[name="user_dropdown_content"] {
 }
 
 div[name="user_dropdown"]:hover div[name="user_dropdown_content"] {display:block;}
+
+
+#drop_down_button {
+    width:40px;
+    height:20px;
+}
 /* ----------------------------------------------------------------------------- */
 
 /*!
