--- a/Client/assets/index.css
+++ b/Client/assets/index.css
@@ -23,7 +23,7 @@
   border-top-right-radius: .3rem;
   border-bottom-right-radius: .3rem;
   background-color: #e9bcb7;
-  background-image: linear-gradient(315deg, #e9bcb7 0%, #29524a 74%);
+  background-image: linear-gradient(315deg, #F7FF00 0%, #29524a 74%);
   } 
   }
 
